# DirettaRendererUPnP-W

./: BUILD_WINDOWS.md  CMakeLists.txt  Changelog.md  DirettaRendererUPnP.sln  DirettaRendererUPnP.vcxproj  FORK_CHANGES.md  Install-Service.bat  Install-Service.ps1  LICENSE  Launch-DirettaRenderer.bat  Makefile  QuickStart-DirettaRenderer.bat  README.md  Start-DirettaRenderer.bat  Start-DirettaRenderer.ps1  THIRD_PARTY_LICENSES.md  build.bat  install.ps1  install.sh  vcpkg.json
docs/: INSTALLATION.md
src/: AudioEngine.cpp  DirettaRenderer.cpp  DirettaRenderer.h  DirettaRingBuffer.h  DirettaSync.cpp  DirettaSync.h  Platform.h  UPnPDevice.cpp  main.cpp
